# my-whisper

./: .gitignore  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json  post-create-command.sh
my_whisper/: __init__.py  cli.py  whisper_transcriber.py
tests/: test_whisper_transcriber.py
